--- a/app_admin/src/app/add-trip/add-trip.html
+++ b/app_admin/src/app/add-trip/add-trip.html
@@ -1,14 +1,11 @@
-
 <div class="col-md-4">
     <h2 class="text-center">Add Trip</h2>
-    <form *ngIf="addForm" [formGroup]="addForm"
-(ngSubmit)="onSubmit()">
+    <form *ngIf="addForm" [formGroup]="addForm" (ngSubmit)="onSubmit ()">
       <div class="form-group">
         <label>Code:</label>
         <input type="text" formControlName="code"
           placeholder="Code" class="form-control"
-          [ngClass]="{ 'is-invalid': submitted && f['code'].errors
-}">
+          [ngClass]="{ 'is-invalid': submitted && f['code'].errors}" />
         <div *ngIf="submitted && f['code'].errors">
           <div *ngIf="f['code'].errors?.['required']">
             Trip Code is required
@@ -19,8 +16,7 @@
         <label>Name:</label>
         <input type="text" formControlName="name"
             placeholder="Name" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f['name'].errors
-}">
+            [ngClass]="{ 'is-invalid': submitted && f['name'].errors}" />
       <div *ngIf="submitted && f['name'].errors">
         <div *ngIf="f['name'].errors?.['required']">
             Name is required
@@ -32,8 +28,7 @@
       <label>Length:</label>
       <input type="text" formControlName="length"
           placeholder="Name" class="form-control"
-          [ngClass]="{ 'is-invalid': submitted && f['length'].errors
-}">
+          [ngClass]="{ 'is-invalid': submitted && f['length'].errors}" />
       <div *ngIf="submitted && f['length'].errors">
         <div *ngIf="f['length'].errors?.['required']">
             Length is required
@@ -45,8 +40,7 @@
       <label>Start:</label>
       <input type="date" formControlName="start"
         placeholder="Start" class="form-control"
-        [ngClass]="{ 'is-invalid': submitted && f['start'].errors
-}">
+        [ngClass]="{ 'is-invalid': submitted && f['start'].errors}" />
     <div *ngIf="submitted && f['start'].errors">
       <div *ngIf="f['start'].errors?.['required']">
           Date is required
@@ -58,8 +52,7 @@
     <label>Resort:</label>
     <input type="text" formControlName="resort"
       placeholder="Resort" class="form-control"
-      [ngClass]="{ 'is-invalid': submitted && f['resort'].errors
-}">
+      [ngClass]="{ 'is-invalid': submitted && f['resort'].errors}" />
     <div *ngIf="submitted && f['resort'].errors">
       <div *ngIf="f['resort'].errors?.['required']">
         Resort is required
@@ -71,8 +64,7 @@
     <label>Per Person:</label>
     <input type="text" formControlName="perPerson"
       placeholder="Perperson" class="form-control"
-      [ngClass]="{ 'is-invalid': submitted &&
-f['perPerson'].errors }">
+      [ngClass]="{ 'is-invalid': submitted && f['perPerson'].errors }" />
     <div *ngIf="submitted && f['perPerson'].errors">
       <div *ngIf="f['perPerson'].errors?.['required']">
         Per Person is required
@@ -84,8 +76,7 @@ f['perPerson'].errors }">
     <label>Image Name:</label>
     <input type="text" formControlName="image"
       placeholder="Image" class="form-control"
-      [ngClass]="{ 'is-invalid': submitted && f['image'].errors
-}">
+      [ngClass]="{ 'is-invalid': submitted && f['image'].errors}" />
     <div *ngIf="submitted && f['image'].errors">
       <div *ngIf="f['image'].errors?.['required']">
         Image Name is required
@@ -97,8 +88,7 @@ f['perPerson'].errors }">
     <label>Description:</label>
     <input type="text" formControlName="description"
       placeholder="Description" class="form-control"
-      [ngClass]="{ 'is-invalid': submitted &&
-f['description'].errors }">
+      [ngClass]="{ 'is-invalid': submitted && f['description'].errors }" />
     <div *ngIf="submitted && f['description'].errors">
       <div *ngIf="f['description'].errors?.['required']">
         Description is required
