--- a/app_admin/src/app/edit-trip/edit-trip.html
+++ b/app_admin/src/app/edit-trip/edit-trip.html
@@ -1,6 +1,7 @@
 <div class="col-md-4">
     <h2 class="text-center">Edit Trip</h2>
-    <form *ngIf="editForm" [formGroup]="editForm" (ngSubmit)="onSubmit()">
+    <form *ngIf="editForm" [formGroup]="editForm" 
+    (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label>Code:</label>
         <input type="text" 
